care/force-app/main/default/objects/Case_Questions__mdt/Case_Questions__mdt.object-meta.xml
<CustomObject>
    <description>Case questions for EAP clients for lifecare project</description>
    <label>Lifecare Questions for EAP</label>
    <pluralLabel>Lifecare Questions for EAP</pluralLabel>
</CustomObject>