care/force-app/main/default/objects/Case_Questions__mdt/fields/AnswersetId__c.field-meta.xml
<CustomField>
    <fullName>AnswersetId__c</fullName>
    <label>AnswersetId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>