care/force-app/main/default/objects/Case_Questions__mdt/fields/Qnumber__c.field-meta.xml
<CustomField>
    <fullName>Qnumber__c</fullName>
    <label>Qnumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>