care/force-app/main/default/objects/Case_Questions__mdt/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <label>Questions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>