care/force-app/main/default/objects/Case_Questions__mdt/listViews/Ques.listView-meta.xml
<ListView>
    <fullName>Ques</fullName>
    <columns>Qnumber__c</columns>
    <columns>Questions__c</columns>
    <columns>AnswersetId__c</columns>
    <columns>QuestionId__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ques</label>
    <language>en_US</language>
</ListView>